static/css/cross-site-badge.css
div#overlay-div-content2-twitter {
    display: none;
}

div#overlay-div-content2-facebook {
    display: none;
}

div#overlay-div-content3 {
    display: none;
}




div#badge-title {
    text-align: left;
    color: #0E2F36;
    font-size: 40px;
    margin: 10px;
}
div#ripple-badge p {
    margin: 0px;
}

div#badge-subtitle {
    font-size: 20px;
    color: #5CA3B2;
    color: #0E2F36;
    margin: 10px 20px 40px 0px;
    text-align: right;
}

div#badge-action {
    font-size: 24px;
    color: red;
}

div#badge-footer {
   width: 100%;
   height: 50px;
   background-color: white;
   position: absolute;
   bottom: 0px;
   -webkit-border-radius: 0px 0px 10px 10px;
}

div#facebook-login-share {
    float: left;
    margin: 5px 0px 0px 80px;
    cursor: pointer; 
}

div#twitter-login-share {
    float: right;
    margin: 5px 80px 0px 0px;
    cursor: pointer;
}

div#ripple-badge {
        position: relative;
        
	box-shadow: 0 0 10px #000000;
	
        -moz-border-radius: 20px;
        -moz-box-shadow: 0 0 10px #000000;

	-webkit-border-radius: 10px 10px 10px 10px;
	-webkit-box-shadow: 3px 3px 10px #000000;
		
	text-align: center;
	font-size: 16px;
	font-weight: bold;


	background-color: #F2F2F2;
	width: 469px;
	height: 220px;

	font-size: 20px;
	color: red;
}

.overlay-top p {
    margin: 0px;
}

